--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -85,10 +85,15 @@ jobs:
 
       - name: Verify for EXE
         run: |
-          cosign verify-blob  \
-            --oidc-client-id sigstore \
-            --oidc-issuer https://token.actions.githubusercontent.com \
-            ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
+          cosign verify-blob \
+            --signature ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
+            --certificate-identity-regexp "https://github\.com/smallstep/workflows/.*" \
+            --certificate-oidc-issuer https://token.actions.githubusercontent.com \
+            /build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
+          # cosign verify-blob  \
+          #   --oidc-client-id sigstore \
+          #   --oidc-issuer https://token.actions.githubusercontent.com \
+          #   ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
 
       - name: Upload binaries, attestations and signatures to release
         uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974 # v2.1.0
