--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -87,7 +87,7 @@ jobs:
         run: |
           cosign verify-blob \
             --signature ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
-            --certificate-identity-regexp "https://github\.com/smallstep/workflows/.*" \
+            --certificate-identity-regexp "https://github.com/Ludy87/test_java/.*" \
             --certificate-oidc-issuer https://token.actions.githubusercontent.com \
             /build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
           # cosign verify-blob  \
