--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -85,7 +85,9 @@ jobs:
 
       - name: Verify for EXE
         run: |
+          cosign public-key --sk > pub.key
           cosign verify-blob \
+            --key pub.key
             --signature ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
             --certificate-identity-regexp "https://github.com/Ludy87/test_java/.*" \
             --certificate-oidc-issuer https://token.actions.githubusercontent.com \
