--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -85,13 +85,9 @@ jobs:
 
       - name: Verify for EXE
         run: |
-          cosign piv-tool generate-key
-          cosign public-key --sk > pub.key
           cosign verify-blob \
-            --key pub.key
-            --signature ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
-            --certificate-identity-regexp "https://github.com/Ludy87/test_java/.*" \
-            --certificate-oidc-issuer https://token.actions.githubusercontent.com \
+            --certificate-identity=https://github.com/Ludy87/test_java/.github/workflows/releaseArtifacts.yml@refs/heads/main
+            --certificate-oidc-issuer=https://token.actions.githubusercontent.com
             /build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
           # cosign verify-blob  \
           #   --oidc-client-id sigstore \
