--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -61,6 +61,8 @@ jobs:
       - name: Install Cosign
         uses: sigstore/cosign-installer@dc72c7d5c4d10cd6bcb8cf6e3fd625a9e5e537da # v3.7.0
 
+      - run: cosign generate-key-pair
+
       - name: Sign, Generate Attestations for JAR
         run: |
           cosign attest-blob  \
@@ -86,6 +88,7 @@ jobs:
       - name: Verify for EXE
         run: |
           cosign verify-blob \
+             --key=./cosign.pub
             --certificate-identity=https://github.com/Ludy87/test_java/.github/workflows/releaseArtifacts.yml@refs/heads/main \
             --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
             /build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
