--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -89,8 +89,7 @@ jobs:
         run: |
           cosign verify-blob \
              --key=./cosign.pub \
-            # --certificate-identity=https://github.com/Ludy87/test_java/.github/workflows/releaseArtifacts.yml@refs/heads/main \
-            # --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
+             --signature=./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
             /build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
           # cosign verify-blob  \
           #   --oidc-client-id sigstore \
