--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -88,9 +88,9 @@ jobs:
       - name: Verify for EXE
         run: |
           cosign verify-blob \
-             --key=./cosign.pub \
-             --signature=./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
-            /build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
+            --key=./cosign.pub \
+            --signature=./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
+            ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
           # cosign verify-blob  \
           #   --oidc-client-id sigstore \
           #   --oidc-issuer https://token.actions.githubusercontent.com \
