--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -74,6 +74,11 @@ jobs:
             --output-attestation ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.intoto.jsonl \
             ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar
 
+      - run: |
+          cosign sign-blob --key=./cosign.key \
+            --output=./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
+            ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
+
       - name: Sign, Generate Attestations for EXE
         run: |
           cosign attest-blob  \
@@ -81,7 +86,7 @@ jobs:
             --yes \
             --oidc-client-id sigstore \
             --oidc-issuer https://token.actions.githubusercontent.com \
-            --output-signature ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
+            # --output-signature ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
             --output-attestation ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.intoto.jsonl \
             ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
 
