--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -85,8 +85,8 @@ jobs:
           cosign attest-blob  \
             --predicate - \
             --yes \
-            --oidc-client-id sigstore \
-            --oidc-issuer https://token.actions.githubusercontent.com \
+            --key=./cosign.pub \
+            --signature=./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
             --output-attestation ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.intoto.jsonl \
             ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
 
@@ -96,10 +96,7 @@ jobs:
             --key=./cosign.pub \
             --signature=./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
             ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
-          # cosign verify-blob  \
-          #   --oidc-client-id sigstore \
-          #   --oidc-issuer https://token.actions.githubusercontent.com \
-          #   ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
+          cosign verify-attestation --key cosign.pub ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.intoto.jsonl
 
       - name: Upload binaries, attestations and signatures to release
         uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974 # v2.1.0
