--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -74,12 +74,12 @@ jobs:
             --output-attestation ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.intoto.jsonl \
             ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar
 
-      # - run: |
-      #     cosign sign-blob \
-      #       --key=./cosign.key \
-      #       --yes \
-      #       --output-signature ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
-      #       ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
+      - run: |
+          cosign sign-blob \
+            --key=./cosign.key \
+            --yes \
+            --output-signature ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
+            ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
 
       - name: Sign, Generate Attestations for EXE
         run: |
@@ -87,7 +87,6 @@ jobs:
             --predicate - \
             --yes \
             --key=./cosign.key \
-            --output-signature ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
             --output-attestation ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.intoto.jsonl \
             ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
 
