--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
         with:
-          name: binaries-${{ matrix.file_suffix }}
+          name: binaries${{ matrix.file_suffix }}
           path: |
             ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.*
             ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.*
@@ -73,7 +73,7 @@ jobs:
       - name: Download build artifacts
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
-          name: binaries-${{ matrix.file_suffix }}
+          name: binaries${{ matrix.file_suffix }}
 
       - name: Install Cosign
         uses: sigstore/cosign-installer@dc72c7d5c4d10cd6bcb8cf6e3fd625a9e5e537da # v3.7.0
@@ -110,7 +110,7 @@ jobs:
       - name: Upload signed artifacts
         uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
         with:
-          name: signed-${{ matrix.file_suffix }}
+          name: signed${{ matrix.file_suffix }}
           path: |
             ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.*
             ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.*
@@ -122,7 +122,7 @@ jobs:
       - name: Download signed artifacts
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
-          name: signed-${{ matrix.file_suffix }}
+          name: signed${{ matrix.file_suffix }}
 
       - name: Get version number
         id: versionNumber
