--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -137,6 +137,8 @@ jobs:
   release:
     needs: sign
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     strategy:
       matrix:
         enable_security: [true, false]
