--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -23,6 +23,8 @@ jobs:
             file_suffix: "-with-login"
           - enable_security: false
             file_suffix: ""
+    outputs:
+      version: ${{ steps.versionNumber.outputs.versionNumber }}
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
@@ -135,7 +137,7 @@ jobs:
             ./launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.*
 
   release:
-    needs: sign
+    needs: [build, sign]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -153,16 +155,10 @@ jobs:
         with:
           name: signed${{ matrix.file_suffix }}
 
-      - name: Get version number
-        id: versionNumber
-        run: |
-          VERSION=$(grep "^version =" build.gradle | awk -F'"' '{print $2}')
-          echo "versionNumber=$VERSION" >> $GITHUB_OUTPUT
-
       - name: Create GitHub Release
         uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974 # v2.1.0
         with:
-          tag_name: v${{ steps.versionNumber.outputs.versionNumber }}
+          tag_name: v${{ needs.build.outputs.version }}
           files: |
             ./libs/Stirling-PDF${{ matrix.file_suffix }}.*
             ./launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.*
