--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -159,6 +159,7 @@ jobs:
         uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974 # v2.1.0
         with:
           tag_name: v${{ needs.build.outputs.version }}
+          generate_release_notes: true
           files: |
             ./libs/Stirling-PDF${{ matrix.file_suffix }}.*
             ./launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.*
