--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -14,7 +14,7 @@ jobs:
     permissions:
       contents: write
       id-token: write
-      attestations: write
+      # attestations: write
     strategy:
       matrix:
         enable_security: [true, false]
