--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -11,8 +11,8 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    # permissions:
+      # contents: write
       # id-token: write
       # attestations: write
     strategy:
