--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.8.0
+    rev: v0.8.4
     hooks:
       - id: ruff
         args:
@@ -21,6 +21,25 @@ repos:
           - --quiet-level=2
         files: \.(properties|html|css|js|py|md)$
         exclude: (.vscode|.devcontainer|src/main/resources|Dockerfile)
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.22.0
+    hooks:
+      - id: gitleaks
+  - repo: https://github.com/jumanjihouse/pre-commit-hooks
+    rev: 3.0.0
+    hooks:
+      - id: shellcheck
+        files: ^.*(\.bash|\.sh|\.ksh|\.zsh)$
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v5.0.0
+    hooks:
+      - id: end-of-file-fixer
+        files: ^.*(\.js|\.java|\.py|\.yml)$
+        exclude: ^(.*/pdfjs.*|.*/thirdParty.*|bootstrap.*|.*\.min\..*|.*diff\.js$)
+      - id: trailing-whitespace
+        files: ^.*(\.js|\.java|\.py|\.yml)$
+        exclude: ^(.*/pdfjs.*|.*/thirdParty.*|bootstrap.*|.*\.min\..*|.*diff\.js$)
+
   - repo: local
     hooks:
       - id: check-duplicate-properties-keys
@@ -30,8 +49,9 @@ repos:
         files: ^(src)/.+\.properties$
       - id: check-html-tabs
         name: Check HTML for tabs
+        description: Ensures HTML/CSS/JS files do not contain tab characters
         # args: ["--replace_with=  "]
         entry: python .github/scripts/check_tabulator.py
         language: python
-        exclude: ^(src/main/resources/static/pdfjs|src/main/resources/static/pdfjs-legacy)
+        exclude: ^(.*/pdfjs.*|.*/thirdParty.*|bootstrap.*|.*\.min\..*|.*diff\.js$)
         files: ^.*(\.html|\.css|\.js)$
