--- a/.github/workflows/pre_commit.yml
+++ b/.github/workflows/pre_commit.yml
@@ -25,7 +25,9 @@ jobs:
         with:
           python-version: 3.12
       - name: Run Pre-Commit Hooks
-        run: pip install -r requirements_pre_commit.txt
+        run: |
+          pip-compile --generate-hashes --output-file='requirements_pre_commit.txt' 'requirements_pre_commit.in'
+          pip install -r requirements_pre_commit.txt
       - run: pre-commit run --all-files -c .pre-commit-config.yaml
         continue-on-error: true
       - name: Set up git config
