--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,7 @@ repos:
   - repo: https://github.com/jumanjihouse/pre-commit-hooks
     rev: 3.0.0
     hooks:
-      - id: bundler-audit
+      # - id: bundler-audit
       # - id: check-mailmap
       # - id: fasterer
       # - id: forbid-binary
@@ -40,11 +40,11 @@ repos:
       # - id: reek
       # - id: require-ascii
       # - id: rubocop
-      # - id: script-must-have-extension
-      # - id: script-must-not-have-extension
-      # - id: shellcheck
-      #   files: ^.*(\.bash|\.sh|\.ksh|\.zsh)$
-      # - id: shfmt
+      - id: script-must-have-extension
+      - id: script-must-not-have-extension
+      - id: shellcheck
+        files: ^.*(\.bash|\.sh|\.ksh|\.zsh)$
+      - id: shfmt
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
